fix bug where header action bar is too large and causes overflow

--- a/inkstone-app/src/components/header/Header.scss
+++ b/inkstone-app/src/components/header/Header.scss
@@ -23,7 +23,6 @@
         display: grid;
         height: 8vw;
         max-height: 40px;
-        width: 100vw;
         grid-template-columns: repeat(7, 1fr);
         .headerRouterLinks {
             justify-self: center;
